--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>京海联平台</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>欢迎光临京海联平台</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
