--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,21 @@
     />
     <meta name="theme-color" content="#000000" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+      <!--<meta http-equiv="X-UA-Compatible"content="IE=EmulateIE8" />-->
+
+    <!--
+        针对不同浏览器的兼容策略
+        对于不兼容的ie内核浏览器进行提示升级
+
+    -->
+
+    <!--<meta charset="UTF-8"/>-->
+    <!--<meta name="renderer" content="webkit"/>-->
+    <!--<meta name="force-rendering" content="webkit"/>-->
+    <!--<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"/>-->
+    <!--<script>/*@cc_on window.location.href="http://support.dmeng.net/upgrade-your-browser.html?referrer="+encodeURIComponent(window.location.href); @*/</script>-->
+
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,6 +39,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>京海联平台</title>
+    <script src="./es6-sham.js"></script>
+    <script src="./es6-shim.js"></script>
   </head>
   <body>
     <noscript>欢迎光临京海联平台</noscript>
